--- a/home.html
+++ b/home.html
@@ -6,22 +6,23 @@
 		<meta name="description" content="A sugar daddy dating site that connects handsome wealthy and caring men to hot young women. Worlds first sugar daddy site to use disruptive SMS messaging. Find a Sugar Daddy today!" />		
 		<meta name="Author" content="Gautam Sharma" />		
 		<meta name="format-detection" content="telephone=no"/>
-		<title>SpoiledByMen.com</title>
-		<link rel="canonical" href="https://SpoiledByMen.com"
+		<title>OneSugarDaddy.com</title>
+		<link rel="canonical" href="https://OneSugarDaddy.com"
 		<link rel="icon" href="favicon.png">
-		<link href="https://lushmatch.com/assets/css/font-awesome.css" rel="stylesheet" >
-		<link href="https://lushmatch.com/assets/css/jquery-confirm.css" rel="stylesheet" />
+		<link href="https://onesugardaddy.com/assets/css/font-awesome.css" rel="stylesheet" >
+		<link href="https://onesugardaddy.com/assets/css/jquery-confirm.css" rel="stylesheet" />
 		<link href="css/shadows.css" rel="stylesheet" />
-		<link href="https://lushmatch.com/assets/css/bootstrap.css" rel="stylesheet">
-		<link href="https://lushmatch.com/assets/css/menu.css" rel="stylesheet">
-		<link href="https://lushmatch.com/assets/css/font-awesome.css" rel="stylesheet">
-		<link href="https://lushmatch.com/assets/css/animate.css" rel="stylesheet">
-		<link href="https://lushmatch.com/assets/css/bootstrap.css" rel="stylesheet">
+		<link href="https://onesugardaddy.com/assets/css/bootstrap.css" rel="stylesheet">
+		<link href="https://onesugardaddy.com/assets/css/menu.css" rel="stylesheet">
+		<link href="https://onesugardaddy.com/assets/css/font-awesome.css" rel="stylesheet">
+		<link href="https://onesugardaddy.com/assets/css/animate.css" rel="stylesheet">
+		<link href="https://onesugardaddy.com/assets/css/bootstrap.css" rel="stylesheet">
 		<link href="style.css" rel="stylesheet"> 
 		<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Open+Sans:300|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-		<script src="https://sugardaddylocal.com/js/jquery.js"></script>
+		<script src="https://onesugardaddy.com/custom_js/base.js"></script>
+		<script src="https://onesugardaddy.com/js/jquery.js"></script>
 		<script src="js/wait.js"></script>
-		<script src="https://sugardaddylocal.com/js/aes.js"></script>
+		<script src="https://onesugardaddy.com/js/aes.js"></script>
 	
 	
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -228,7 +229,7 @@
 									<td colspan=2 style="text-align:left;width:100%;padding:20px;font-family: Open Sans"><br><br>
 											<b>IMPORTANT NOTICE</b><br><a href="javascript:show_drop_down_menu()">We have significantly improved site navigation.
 											Tap the hamburger menu icon on the top right hand corner to see the magic! All site functions (significant to members) organized logically, functionally and more - all in one place!<br>
-											<img style="width:20px;margin:5px" src="https://lushmatch.com/assets/images/m1.png">This cheat sheet is accessible from every page!</a>
+											<img style="width:20px;margin:5px" src="https://onesugardaddy.com/assets/images/m1.png">This cheat sheet is accessible from every page!</a>
 									</td>
 								</tr>
 							</table>
@@ -245,7 +246,7 @@
 								</tr>
 								<tr class="" >
 									<td colspan=3>
-										<div style="margin-top:-5px" id="lp"><img style="height:60px" src="https://lushmatch.com/assets/img/l4.gif"></div>
+										<div style="margin-top:-5px" id="lp"><img style="height:60px" src="https://onesugardaddy.com/assets/img/l4.gif"></div>
 									</td>
 								</tr>
 							</table>
@@ -262,7 +263,7 @@
 								</tr>
 								<tr class="" >
 									<td colspan=3>
-										<div style="margin-top:-5px;display:none" id="np"><img style="height:60px" src="https://lushmatch.com/assets/img/l4.gif"></div>
+										<div style="margin-top:-5px;display:none" id="np"><img style="height:60px" src="https://onesugardaddy.com/assets/img/l4.gif"></div>
 									</td>
 								</tr>
 							</table>
@@ -291,18 +292,18 @@
 			<div id="tr2" style="background:#000;display:none;position:fixed;bottom:54px">
 
 			</div>	
-<div style="display:none;width:100%;margin:auto;margin-top:100px" id="ne"><img style="height:60px;display:none" src="https://lushmatch.com/assets/img/l4.gif"></div>
-<div style="display:none;width:100%;margin:auto;margin-top:100px;position:absolute'z-index:9999999999999999999999" id="on"><img style="height:60px;display:none" src="https://lushmatch.com/assets/img/l4.gif"></div>
+<div style="display:none;width:100%;margin:auto;margin-top:100px" id="ne"><img style="height:60px;display:none" src="https://onesugardaddy.com/assets/img/l4.gif"></div>
+<div style="display:none;width:100%;margin:auto;margin-top:100px;position:absolute'z-index:9999999999999999999999" id="on"><img style="height:60px;display:none" src="https://onesugardaddy.com/assets/img/l4.gif"></div>
 
 <span id="main_table"></span>
 <script src="https://sugardaddylocal.com/js/jquery.js"></script>
-<script src="https://lushmatch.com/assets/js/common.js"></script>
+<script src="https://onesugardaddy.com/assets/js/common.js"></script>
 <script src="https://sugardaddylocal.com/js/wait.js"></script>
-<script src="https://lushmatch.com/assets/js/events.js"></script>
-<script src="https://lushmatch.com/assets/js/bootstrap.min.js"></script>
-<script src="https://lushmatch.com/assets/js/scripts.js"></script>
-<link href="https://lushmatch.com/assets/css/bootstrap.css" rel="stylesheet">
-<link href="https://lushmatch.com/assets/css/jquery-ui.css" rel="stylesheet">
+<script src="https://onesugardaddy.com/assets/js/events.js"></script>
+<script src="https://onesugardaddy.com/assets/js/bootstrap.min.js"></script>
+<script src="https://onesugardaddy.com/assets/js/scripts.js"></script>
+<link href="https://onesugardaddy.com/assets/css/bootstrap.css" rel="stylesheet">
+<link href="https://onesugardaddy.com/assets/css/jquery-ui.css" rel="stylesheet">
 <link href="https://sugardaddylocal.com/css/animate.css" rel="stylesheet">
 <style>
 	.genActive{background: gold;border:none;opacity:1!Important}
@@ -581,7 +582,7 @@
 						cr+='<table style="height:160px;position:absolute;bottom:5px;margin:auto;left:0;right:0;width:100%">'
 						cr+='<tr><td colspan=4 style="text-align:center;width:100%;padding:5px;color:#000;font-size:14px;font-weight:300;font-family:Open Sans">'+data[i].login.substr(0,15).toUpperCase()+' ' + data[i].age + '<div style="font-size:14px;color:silver">' + data[i].location +'</div><div style="font-size:12px;color:orange"><b>'+data[i].distance+'</b> MILES</div></span></div></td></tr>'
 						cr+='<tr><td colspan=4><div style="margin-top:-15px;padding:5px;line-height:0.9em;font-size:18px;text-align:center;font-weight:300;font-family:Open Sans Condensed">'+gi+'...</div></td></tr>'
-						cr+='<tr><td style="text-align:center;width:20%;"><button onclick="videoCallX(\''+data[i].login+'\')" class="btn" style="margin:5px;height:35px;padding:10px;background:#f0f0f0;width:100%;margin-bottom:-10px;"><img style="width:100%;margin-top:-10px;" src="images/video_cam_black.png"></button></td><td style="width:80%;text-align:center;"><button onclick="send_mail('+id+')" class="btn" style="background:#53DAFF;width:90%;margin-bottom:-2px;height:35px">CONTACT</button></td><td></td>'
+						cr+='<tr><td style="text-align:center;width:20%;"><button onclick="videoCallx(\''+data[i].login+'\')" class="btn" style="margin:5px;height:35px;padding:10px;background:#f0f0f0;width:100%;margin-bottom:-10px;"><img style="width:100%;margin-top:-10px;" src="images/video_cam_black.png"></button></td><td style="width:80%;text-align:center;"><button onclick="send_mail('+id+')" class="btn" style="background:#53DAFF;width:90%;margin-bottom:-2px;height:35px">CONTACT</button></td><td></td>'
 						cr+='</tr></table>'
 						cStr.innerHTML=cr
 						dpg.appendChild(imgB)
@@ -767,7 +768,7 @@
 				
 			}
 			
-						function getProfilesNewLocal_list() {
+			function getProfilesNewLocal_list() {
 				if (!getCookie('x_gender') || getCookie('x_gender')=='null' || getCookie('x_gender')=='') {
 					x_gender=getCookie('gender')
 				} else {
@@ -848,7 +849,7 @@
 								dpg.style.position='relative'
 								cr+='<table style="width:100%;border-bottom:1px solid skyblue"><tr><td style="width:20%;text-align:center"><img src="https://lushmatch.com/sb/'+data[i].filename_1+'" style="border-radius:45px;max-height:45px;width:45px;border:5px solid #f0f0f0"></td>'
 								cr+='<td style="width:40%"><table style="width:100%;background:;"><tr><td style="text-align:left;width:100%;padding:2px;color:#000;font-size:14px;font-family:Open Sans;font-weight:"><b><strong>'+ data[i].login.toUpperCase() + '</b><br>' + data[i].gender + ', ' + data[i].age + '<br>' + data[i].location+'</td></tr></table></td>'
-								cr+='<td style="width:40%"><table><tr><td><img onclick="send_mail('+id+')" src="images/bubble23.png" style="width:20px;margin:5px;margin-right:10px"></td><td><img onclick="videoCallX(\''+data[i].login+'\')" src="images/video_cam_black.png" style="width:20px;margin:5px"></td><td><a href="member_wishlist.html?mid='+data[i].id+'"><img src="img/gift.png" style="width:20px;margin-left:10px;margin-right:5px;"></a></td><td><img src="images/addw.png" onclick="shortlist('+id+')" style="width:20px;margin:5px;margin-left:10px;margin-right:10px"></td></tr></table></td>'
+								cr+='<td style="width:40%"><table><tr><td><img onclick="send_mail('+id+')" src="images/bubble23.png" style="width:20px;margin:5px;margin-right:10px"></td><td><img onclick="videoCallx(\''+data[i].login+'\')" src="images/video_cam_black.png" style="width:20px;margin:5px"></td><td><a href="member_wishlist.html?mid='+data[i].id+'"><img src="img/gift.png" style="width:20px;margin-left:10px;margin-right:5px;"></a></td><td><img src="images/addw.png" onclick="shortlist('+id+')" style="width:20px;margin:5px;margin-left:10px;margin-right:10px"></td></tr></table></td>'
 								cr+='</tr></table>'
 								cStr.innerHTML=cr
 								dpg.appendChild(cStr)
@@ -943,7 +944,7 @@
 								dpg.style.position='relative'
 								cr+='<table style="width:100%;border-bottom:1px solid skyblue"><tr><td style="width:20%;text-align:center"><img src="https://lushmatch.com/sb/'+data[i].filename_1+'" style="border-radius:45px;max-height:45px;width:45px;border:5px solid #f0f0f0"></td>'
 								cr+='<td style="width:40%"><table style="width:100%;background:;"><tr><td style="text-align:left;width:100%;padding:2px;color:#000;font-size:14px;font-family:Open Sans;font-weight:"><b><strong>'+ data[i].login.toUpperCase() + '</b><br>' + data[i].gender + ', ' + data[i].age + '<br>' + data[i].location+'</td></tr></table></td>'
-								cr+='<td style="width:40%"><table><tr><td><img onclick="send_mail('+id+')" src="images/bubble23.png" style="width:20px;margin:5px;margin-right:10px"></td><td><img onclick="videoCallX(\''+data[i].login+'\')" src="images/video_cam_black.png" style="width:20px;margin:5px"></td><td><a href="member_wishlist.html?mid='+data[i].id+'"><img src="img/gift.png" style="width:20px;margin-left:10px;margin-right:5px;"></a></td><td><img src="images/addw.png" onclick="shortlist('+id+')" style="width:20px;margin:5px;margin-left:10px;margin-right:10px"></td></tr></table></td>'
+								cr+='<td style="width:40%"><table><tr><td><img onclick="send_mail('+id+')" src="images/bubble23.png" style="width:20px;margin:5px;margin-right:10px"></td><td><img onclick="videoCallx(\''+data[i].login+'\')" src="images/video_cam_black.png" style="width:20px;margin:5px"></td><td><a href="member_wishlist.html?mid='+data[i].id+'"><img src="img/gift.png" style="width:20px;margin-left:10px;margin-right:5px;"></a></td><td><img src="images/addw.png" onclick="shortlist('+id+')" style="width:20px;margin:5px;margin-left:10px;margin-right:10px"></td></tr></table></td>'
 								cr+='</tr></table>'
 								cStr.innerHTML=cr
 								dpg.appendChild(cStr)
@@ -1038,7 +1039,7 @@
 								dpg.style.position='relative'
 								cr+='<table style="width:100%;border-bottom:1px solid skyblue"><tr><td style="width:20%;text-align:center"><img src="https://lushmatch.com/sb/'+data[i].filename_1+'" style="border-radius:45px;max-height:45px;width:45px;border:5px solid #f0f0f0"></td>'
 								cr+='<td style="width:40%"><table style="width:100%;background:;"><tr><td style="text-align:left;width:100%;padding:2px;color:#000;font-size:14px;font-family:Open Sans;font-weight:"><b><strong>'+ data[i].login.toUpperCase() + '</b><br>' + data[i].gender + ', ' + data[i].age + '<br>' + data[i].location+'</td></tr></table></td>'
-								cr+='<td style="width:40%"><table><tr><td><img onclick="send_mail('+id+')" src="images/bubble23.png" style="width:20px;margin:5px;margin-right:10px"></td><td><img onclick="videoCallX(\''+data[i].login+'\')" src="images/video_cam_black.png" style="width:20px;margin:5px"></td><td><a href="member_wishlist.html?mid='+data[i].id+'"><img src="img/gift.png" style="width:20px;margin-left:10px;margin-right:5px;"></a></td><td><img src="images/addw.png" onclick="shortlist('+id+')" style="width:20px;margin:5px;margin-left:10px;margin-right:10px"></td></tr></table></td>'
+								cr+='<td style="width:40%"><table><tr><td><img onclick="send_mail('+id+')" src="images/bubble23.png" style="width:20px;margin:5px;margin-right:10px"></td><td><img onclick="videoCallx(\''+data[i].login+'\')" src="images/video_cam_black.png" style="width:20px;margin:5px"></td><td><a href="member_wishlist.html?mid='+data[i].id+'"><img src="img/gift.png" style="width:20px;margin-left:10px;margin-right:5px;"></a></td><td><img src="images/addw.png" onclick="shortlist('+id+')" style="width:20px;margin:5px;margin-left:10px;margin-right:10px"></td></tr></table></td>'
 								cr+='</tr></table>'
 								cStr.innerHTML=cr
 								dpg.appendChild(cStr)
@@ -1161,9 +1162,9 @@
 	
 			function fix(e) {
 				if (pg=='Sugar Baby') 
-					e.target.src='https://lushmatch.com/images/no_photo_f.png'
+					e.target.src='https://onesugardaddy.com/images/no_photo_f.png'
 				else
-					e.target.src='https://lushmatch.com/images/no_photo_m.png'
+					e.target.src='https://onesugardaddy.com/images/no_photo_m.png'
 				e.target.style.width='130px'
 				e.target.style.height='130px'
 				e.target.style.borderRadius='200px'
@@ -1172,9 +1173,9 @@
 
 			function fixM(e) {
 				if (pg=='Sugar Baby') 
-					e.target.src='https://lushmatch.com/images/no_photo_f.png'
+					e.target.src='https://onesugardaddy.com/images/no_photo_f.png'
 				else
-					e.target.src='https://lushmatch.com/images/no_photo_m.png'
+					e.target.src='https://onesugardaddy.com/images/no_photo_m.png'
 				e.target.style.width='130px'
 				e.target.style.height='130px'
 				e.target.style.borderRadius='130px'
@@ -1423,6 +1424,7 @@
 	},1000)
 </script>
 
-<script src="https://m.sugardaddylocal.com/custom_menu_updated.js"></script>
-<script src="https://sugardaddylocal.com/jsSocketNode.js"></script> <script src="track.js"></script>
+<script src="https://onesugardaddy.com/mobile/custom_menu_updated.js"></script>
+<script src="https://onesugardaddy.com/jsSocketNode.js"></script>
+<script src="track.js"></script>
 </html>
