--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154956474-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-154956474-1');
+		</script>
+
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=1024">
 		<meta name="description" content="A Sugar Daddy dating site that connects handsome wealthy and caring men to hot young women. Worlds first Sugar Daddy site to use disruptive SMS messaging. Find a Sugar Daddy today!" />		
 		<meta name="Author" content="Gautam Sharma" />		
 		<meta name="format-detection" content="telephone=no"/>
 		<meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0" />		
-		<title>Elite Dating | SugarDaddyOne.com</title>
+		<title>Elite Dating | OneSugarDaddy.com</title>
 		<link rel="canonical" href="">
 		<link rel="icon" href="favicon.png">
-		<link href="https://lushmatch.com/assets/css/font-awesome.css" rel="stylesheet" >
-		<link href="https://lushmatch.com/assets/css/shadows.css" rel="stylesheet" />
-		<link href="https://lushmatch.com/assets/css/jquery-ui.css" rel="stylesheet" />
-		<link href="https://lushmatch.com/assets/css/bootstrap.css" rel="stylesheet">
-		<link href="https://lushmatch.com/assets/css/menu.css" rel="stylesheet">
-		<link href="https://lushmatch.com/assets/css/font-awesome.css" rel="stylesheet">
-		<link href="https://lushmatch.com/assets/css/animate.css" rel="stylesheet">
+		<link href="https://onesugardaddy.com/assets/css/font-awesome.css" rel="stylesheet" >
+		<link href="https://onesugardaddy.com/assets/css/shadows.css" rel="stylesheet" />
+		<link href="https://onesugardaddy.com/assets/css/jquery-ui.css" rel="stylesheet" />
+		<link href="https://onesugardaddy.com/assets/css/bootstrap.css" rel="stylesheet">
+		<link href="https://onesugardaddy.com/assets/css/menu.css" rel="stylesheet">
+		<link href="https://onesugardaddy.com/assets/css/font-awesome.css" rel="stylesheet">
+		<link href="https://onesugardaddy.com/assets/css/animate.css" rel="stylesheet">
 		<link href="css/login.css" rel="stylesheet">
 		<link href="style.css" rel="stylesheet"> 
 		<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Open+Sans:300' rel='stylesheet' type='text/css'>
@@ -30,15 +40,11 @@
 		}
 </style>
 <script src="https://sugardaddylocal.com/js/jquery.js"></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-61204113-1"></script>
 <script>
-	var version=41
+	var version=2
 	setCookie('version',version)
 	setTimeout('setVersion()',1000)
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-	gtag('config', 'UA-61204113-1');
+
 
 	function handleOpenURL(url) {
 		setCookie('url',url)
@@ -109,6 +115,7 @@
 		<![endif]-->
 </head>
 	<body style="background:black">
+
 		<div class="page-loader">
 			<img src="assets/img/loader.gif" alt="">
 		</div>
@@ -122,7 +129,7 @@
 							<div class="navbar-header"  style="width:300px;position:;margin:auto;left:0;right:0">
 							</div>
 							<div class="collapse navbar-collapse" style="background:">
-								<a class="navbar-brand mobile pull-left" href="#"><img src="https://lushmatch.com/icon.png" style="width:100px"></a>
+								<a class="navbar-brand mobile pull-left" href="#"><img src="https://onesugardaddy.com/favicon.png" style="width:100px"></a>
 
 							<!-- end .nav .navbar-nav -->
 							</div>
@@ -139,7 +146,7 @@
 				<!-- end .container -->
 			</div>
 		</header> 
-		<img src="https://lushmatch.com/images/logo.png" style="margin:auto;width:90%;position:absolute;z-index:999999999999999999;top:80px;left:0;right:0">
+		<img src="https://onesugardaddy.com/images/logo.png" style="margin:auto;width:90%;position:absolute;z-index:999999999999999999;top:80px;left:0;right:0">
 		<div id="large-header" class="large-header" style="margin-top:-70px">
 			<canvas id="demo-canvas"></canvas>
 			<h1 class="main-title" style="font-size:2.2em;width:100%">INSTANTLY <div class="thin wow pulse" data-wow-duration="1.8s" data-wow-delay="0.5s" data-wow-iteration="3">CONNECT</div>
@@ -241,10 +248,10 @@
 	{
 	  "@context": "http://schema.org",
 	  "@type": "WebSite",
-	  "url": "https://sugardaddylocal.com/",
+	  "url": "https://onesugardaddy.com/",
 	  "potentialAction": {
 		"@type": "SearchAction",
-		"target": "sd://local.sugardaddy.app?q={search_term_string}",
+		"target": "osd://one.sugardaddy.com?q={search_term_string}",
 		"query-input": "required name=search_term_string"
 	  }
 	}
@@ -311,14 +318,14 @@
 <script src="https://sugardaddylocal.com/js/jquery.js"></script>
 <script src="https://terrawire.com/assets/js/jquery.js"></script>
 <script src="https://terrawire.com/assets/js/bootstrap.js"></script>
-<script src="https://lushmatch.com/assets/js/common.js"></script>
-<script src="https://lushmatch.com/assets/js/events.js"></script>
+<script src="https://onesugardaddy.com/assets/js/common.js"></script>
+<script src="https://onesugardaddy.com/assets/js/events.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="https://lushmatch.com/assets/js/plugins.js"></script>
-<script src="https://lushmatch.com/assets/js/parallax.js"></script>
-<script src='https://lushmatch.com/assets/js/countto.js'></script>
-<script src="https://lushmatch.com/assets/js/portfolio.js"></script>
-<script src="https://lushmatch.com/assets/js/animheader.js"></script>
+<script src="https://onesugardaddy.com/assets/js/plugins.js"></script>
+<script src="https://onesugardaddy.com/assets/js/parallax.js"></script>
+<script src='https://onesugardaddy.com/assets/js/countto.js'></script>
+<script src="https://onesugardaddy.com/assets/js/portfolio.js"></script>
+<script src="https://onesugardaddy.com/assets/js/animheader.js"></script>
 <script src="js/scripts.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
@@ -327,7 +334,7 @@
 	setTimeout('onDeviceReady()',1000)
 	
 	function sendForgot() {
-		var url='https://lushmatch.com/x_send_password.php?login='+$$('loginF').value+'&mobile='+$$('mobileF').value
+		var url='https://onesugardaddy.com/x_send_password.php?login='+$$('loginF').value+'&mobile='+$$('mobileF').value
 		console.log(url)
 		$.ajax({url:url,success:function(data){
 			$.alert({title:'',content:data})
@@ -348,7 +355,7 @@
 
 	function loc() {
 		$.ajax({
-			url: "https://lushmatch.com/x_location.php",
+			url: "https://onesugardaddy.com/x_location.php",
 			type: "GET",
 			dataType: "html",
 			success: function(msg){
@@ -365,7 +372,7 @@
 	function b(err) {
 		console.log (err.message)
 		$.ajax({
-			url: "https://lushmatch.com/x_location.php",
+			url: "https://onesugardaddy.com/x_location.php",
 			type: "GET",
 			dataType: "html",
 			success: function(msg){
@@ -384,12 +391,12 @@
 	}
 		
 	function a(p) {
-		console.log('https://lushmatch.com/x_get_address.php?lat='+p.coords.latitude+'&lng='+p.coords.longitude)
+		console.log('https://onesugardaddy.com/x_get_address.php?lat='+p.coords.latitude+'&lng='+p.coords.longitude)
 		setCookie('lat',p.coords.latitude)
 		setCookie('lng',p.coords.longitude)
 		setCookie('accurate',"1")
 		$.ajax({
-			url: 'https://lushmatch.com/x_get_address.php?lat='+p.coords.latitude+'&lng='+p.coords.longitude,
+			url: 'https://onesugardaddy.com/x_get_address.php?lat='+p.coords.latitude+'&lng='+p.coords.longitude,
 			type: "GET",
 			dataType: "html",
 			success: function(msg){
@@ -580,7 +587,7 @@
 	var ft
 	var js
 	function loadExtURL() {
-		var url="https://lushmatch.com/pg_callback.php?fbid="+sesx
+		var url="https://onesugardaddy.com/pg_callback.php?fbid="+sesx
 		ref = window.open(url, '_BLANK', 'location=no');
 		txc=setTimeout('chkFBSession()',1000)
 	}
@@ -595,7 +602,7 @@
 	}
 
 	function getData() {
-		var url = 'https://lushmatch.com/x_get_pgap_fb.php?id=' + sesx + '&x=' + Math.random()*1000000000000
+		var url = 'https://onesugardaddy.com/x_get_pgap_fb.php?id=' + sesx + '&x=' + Math.random()*1000000000000
 		var request = $.ajax({
 			url: url,
 			type: "GET",
@@ -755,7 +762,7 @@
 	}
 	function getLocation(type,ox) {
 		var request = $.ajax({
-			url: 'https://lushmatch.com/x_location.php',
+			url: 'https://onesugardaddy.com/x_location.php',
 			type: "GET",
 			dataType: "html",
 			cache: false,
