--- a/profileBrowse.html
+++ b/profileBrowse.html
@@ -439,7 +439,9 @@
 		</style>
 	</head>
 	<body>
-	<script src="https://sugardaddylocal.com/custom_menu_updated.js"></script>
+<div id="rose_div" style="display:none;z-index:999;position:fixed;left:0;top:0;width:100%;height:100%;background:url(https://sugardaddylocal.com/images/bl_bg.png);background-size:cover"><div style="opacity:1;background:white;width:250px;height:250px;border-radius:500px;margin:auto;margin-top:200px;border:20px dashed #555;border-spacing:border-box"><img src="https://terrawire.com/fx/output/960951140782.png" style="position:absolute;left:0;right:0;top:0;bottom:0;width:35%;margin:auto"></div><button class="btn btn-danger" style="position:absolute;left:0;right:0;width:200px;color:white;margin:auto;margin-top:50px" onclick="send_rose()"> Send Rose Now! </button></div>
+	
+	<script src="https://onesugardaddy.com/mobile/custom_menu_updated.js"></script>
 	<div id="con" class="container">
 		<div id="profiles" class="" style="text-align:center;margin-top:25px;">
 		</div>
@@ -706,10 +708,10 @@
 							str+=	'									<div id="sun1" style="text-align:center;width:60px;height:60px;background:url(images/sun5.png);background-size:cover"><a href="javascript:send_mail('+data[i].id+')"><img src="images/bubble_w.png" style="margin:20px;width:25px;"></a></div>'
 							str+=	'								</td>'
 							str+=	'								<td style="width:25%;text-align:center">'
-							str+=	'									<div id="sun2" style="text-align:center;width:60px;height:60px;background:url(images/sun5.png);background-size:cover"><a href="javascript:videoCallX(\''+data[i].login+'\')"><img src="images/video_w.png" style="margin:20px;width:25px;"></a></div>'
+							str+=	'									<div id="sun2" style="text-align:center;width:60px;height:60px;background:url(images/sun5.png);background-size:cover"><a href="javascript:videoCallx(\''+data[i].login+'\')"><img src="images/video_w.png" style="margin:20px;width:25px;"></a></div>'
 							str+=	'								</td>'
 							str+=	'								<td style="width:25%;text-align:center">'
-							str+=	'									<div id="sun3" style=";opacity:1;text-align:center;width:60px;height:60px;background:url(images/sun5.png);background-size:cover"><a href="javascript:buy_rose()"><img src="images/ir.png" style="margin:18px;width:25px;"></a></div>'
+							str+=	'									<div id="sun3" style=";opacity:1;text-align:center;width:60px;height:60px;background:url(images/sun5.png);background-size:cover"><a href="javascript:send_rose()"><img src="images/ir.png" style="margin:18px;width:25px;"></a></div>'
 							str+=	'								</td>'
 							str+=	'								<td style="width:25%;text-align:center">'
 							str+=	'									<div id="sun4" style="text-align:center;width:60px;height:60px;background:url(images/sun5.png);background-size:cover"><a href="javascript:toggle_favs()"><img src="images/heart_w.png" style="margin:20px;width:25px;"></a></div>'
