--- a/sendMail.html
+++ b/sendMail.html
@@ -138,8 +138,8 @@
 		})	
 	}
 	</script>
-	<script src="https://sugardaddylocal.com/jsSocketNode.js"></script> <script src="track.js"></script>
-	<script src="https://sugardaddylocal.com/custom_menu_updated.js"></script>
+	<script src="https://onesugardaddy.com/jsSocketNode.js"></script> <script src="track.js"></script>
+	<script src="https://onesugardaddy.com/mobile/custom_menu_updated.js"></script>
 	
 	  <!--========================================================
                             HEADER
@@ -962,7 +962,7 @@ function $$(ox) {
 		message=message.replace(/\//g,'\/')
 		
 		var from_u=getCookie('mid')
-		var url = encodeURI('https://lushmatch.com/x_send_mail.php?to=' + getCookie('chatting_with') + '&from=' + from_u + '&message=<div>' + message + '</div><div>' + str + '</div>')
+		var url = encodeURI('https://onesugardaddy.com/x_send_mail.php?to=' + getCookie('chatting_with') + '&from=' + from_u + '&message=<div>' + message + '</div><div>' + str + '</div>')
 		console.log(url)
 		//jwait('sending')
 		var request = $.ajax({
